add and use avm service
